# medbridge_partner_project

./: .env.example  .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json
ai_health_coach/api/: routes.py
ai_health_coach/cli/: main.py
ai_health_coach/core/: llm.py  persistence.py  simulation.py
ai_health_coach/core/graph/: active.py  dormant.py  graph_builder.py  onboarding.py  re_engaging.py  router.py
ai_health_coach/core/safety/: classifier.py
ai_health_coach/core/state/: schemas.py
ai_health_coach/core/tools/: definitions.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AlertsPanel.jsx  ChatWindow.jsx  Dashboard.jsx  LoginPage.jsx  Sidebar.jsx
tests/: test_adherence.py  test_alerts.py  test_consent.py  test_consent_gate.py  test_evals.py  test_graph.py  test_nudge_dormant.py  test_reengagement.py  test_reminders.py  test_router.py  test_safety.py  test_safety_flow.py  test_schemas.py  test_simulation.py  test_state.py  test_tool_calling.py  test_tools.py  test_transitions.py
